--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: "Roboto", sans-serif;
     margin: 0;
@@ -26,3 +25,11 @@ body {
     display: none;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    gap: 10px;
+    margin-top: 20px;
+    max-width: 30%;
+}
